homeworks/oleksii_yuriev/module-03/lesson-08/deployment_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
spec:
  replicas: 10
  selector:
    matchLabels:
      app: app

  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 25%

  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: yurievac/lesson-06:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3 
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3 
            successThreshold: 1
