homeworks/oleksii_yuriev/module-03/lesson-08/svc_app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - name: app
      port: 8080
      targetPort: 8080
#      nodePort: 30080
