homeworks/oleksii_yuriev/module-03/lesson-08/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - 127-0-0-1.sslip.io
      secretName: app-tls
  rules:
    - host: 127-0-0-1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
